# waybox

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  xdg-output-unstable-v1.c  xdg-shell-protocol.c
.github/workflows/: rust.yml
src/: config.rs  input_handler.rs  keyboard.rs  main.rs  server.rs  state.rs  udev.rs  view.rs  winit.rs
src/custom/: config.rs  mod.rs
wlr/: wrapper.h
wlroots-src/: README.md
wlroots-src/src/: config.rs  keyboard.rs  main.rs  output.rs  utils.rs  wlr.rs
wlroots-src/wlr/: wlr-layer-shell-unstable-v1-protocol.h  xdg-shell-protocol.h
