[package]
name = "waybox"
version = "0.1.0"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[build-dependencies]
bindgen = "*"
